--- a/MobileWorker/MobileWorker/Views/AdditionProductsPage.xaml
+++ b/MobileWorker/MobileWorker/Views/AdditionProductsPage.xaml
@@ -11,30 +11,49 @@
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
             <RowDefinition Height="*" />
-            <RowDefinition Height="*" />
         </Grid.RowDefinitions>
-        <StackLayout Spacing="8" Grid.Column="0" Grid.Row="0">
+        <!--<StackLayout Spacing="8" Grid.Column="0" Grid.Row="0">
             <Image x:Name="image1"  HeightRequest="190"   HorizontalOptions="Center" />
-        </StackLayout>
+        </StackLayout>-->
 
-        <ScrollView Grid.Column="0" Grid.Row="1">
-            <StackLayout Spacing="8" Grid.Column="0" Grid.Row="1">
-                <Label x:Name="nameProd" FontSize="34" Style="{StaticResource labelNameBold}" />
-                <Label x:Name="LongDescription" FontSize="16"  Style="{StaticResource labelTextDescription}"/>
+        <ScrollView Grid.Column="0" Grid.Row="0" Margin="10">
+            <StackLayout Margin="10">
+                <Label Text="Цена продукта"  Style="{StaticResource labelName}"/>
+                <Entry x:Name="price" Keyboard="Numeric"  TextColor="#787878" FontAttributes="Bold"/>
+
+                <Label Text="Кол-во грамм в продукте(вес)"  Style="{StaticResource labelName}"/>
+                <Entry x:Name="gram" Keyboard="Numeric"  TextColor="#787878" FontAttributes="Bold"/>
+
+                <Label Text="Калорийность продукта"  Style="{StaticResource labelName}"/>
+                <Entry x:Name="kalor" Keyboard="Numeric"  TextColor="#787878" FontAttributes="Bold"/>
+
+
+                <StackLayout Margin="10">
+                    <Button Text="Сохранить изменения" Clicked="Button_Clicked" Style="{StaticResource ButtonShop}"/>
+                </StackLayout>
             </StackLayout>
         </ScrollView>
 
-        <StackLayout Grid.Column="0" Grid.Row="2">
+        <StackLayout Grid.Column="0" Grid.Row="1">
             <StackLayout>
                 <ListView x:Name="additionList"
                           HasUnevenRows="False"
                           RowHeight="90"
-                          ItemsSource="{Binding Producted}"
+                          ItemsSource="{Binding AdditionList}"
+                          IsPullToRefreshEnabled="True"
+                          RefreshCommand="{Binding RefreshCommand}"
+                          IsRefreshing="{Binding IsRefreshing}"
+                          
                           Margin="10,0,10,0"
                           ItemTapped="AdditionList_ItemTapped">
                     <ListView.ItemTemplate>
                         <DataTemplate>
                             <ViewCell>
+                                <ViewCell.ContextActions>
+                                    <MenuItem Clicked="OnDelete"
+                                              CommandParameter="{Binding .}"
+                                              Text="Delete" IsDestructive="True" />
+                                </ViewCell.ContextActions>
                                 <ViewCell.View>
                                     <StackLayout Orientation="Horizontal" HorizontalOptions="Center">
                                         <Label Text="{Binding Price, StringFormat=' {0} Рублей'}" FontSize="30" Style="{StaticResource labelName}" />
