--- a/MobileWorker/MobileWorker/Views/OrderListDetailPage.xaml
+++ b/MobileWorker/MobileWorker/Views/OrderListDetailPage.xaml
@@ -22,36 +22,29 @@
                     <ListView.ItemTemplate>
                         <DataTemplate>
                             <ViewCell>
-                                <ViewCell.ContextActions>
-                                    <!--<MenuItem Clicked="OnMore"
-                                          CommandParameter="{Binding .}"
-                                          Text="More" />-->
-                                    <MenuItem Clicked="OnDelete"
-                                              CommandParameter="{Binding .}"
-                                              Text="Delete" IsDestructive="True" />
-                                </ViewCell.ContextActions>
                                 <ViewCell.View>
                                     <StackLayout Orientation="Horizontal">
                                         <Image Source="{Binding Img}" WidthRequest="90" HeightRequest="110" />
                                         <StackLayout Orientation="Vertical">
                                             <Label Text="{Binding Name}" FontSize="30" Style="{StaticResource labelNameBold}"/>
-                                            <Label Text="{Binding Price, StringFormat='Цена за порцию: {0} Руб.'}"
-                                                   FontSize="23" Style="{StaticResource labelTextDescription}" />
 
+                                            <StackLayout Orientation="Horizontal" HorizontalOptions="Center">
+                                                <Label Text="Кол-во порций: " Style="{StaticResource labelName}" FontSize="23"/>
+                                                <Label Text="{Binding Quantity}" FontSize="30" VerticalOptions="End"
+                                                       HorizontalOptions="Center" Style="{StaticResource labelNameBold}"/>
+                                            </StackLayout>
+
+                                            <Label Text="{Binding Grams, StringFormat=' {0} Грамм'}"
+                                                   FontSize="23" Style="{StaticResource labelTextDescription}" />
+                                            <Label Text="{Binding Price, StringFormat=' {0} Руб./Шт.'}"
+                                                   FontSize="18" Style="{StaticResource labelTextDescription}" />
                                             <!--<Label Text="{Binding ShortDescription}" FontSize="17" />-->
                                             <!--<Button Text="Удалить" />-->
 
                                             <StackLayout Orientation="Horizontal" HorizontalOptions="Center">
-                                                <Button Text="-" Command="{Binding QuantityMinusCommand}"
-                                                        CommandParameter="{Binding BasketList}"
-                                                        Clicked="Button_Clicked_2" FontAttributes="Bold"/>
+                                                <Label Text="Кол-во порций: " Style="{StaticResource labelName}"/>
                                                 <Label Text="{Binding Quantity}" FontSize="30" VerticalOptions="End"
                                                        HorizontalOptions="Center" Style="{StaticResource labelNameBold}"/>
-                                                <Button Text="+" CommandParameter="{Binding BasketList}"
-                                                        Clicked="Button_Clicked_1" FontAttributes="Bold" />
-                                                <!--Command="{Binding QuantityPlusCommand}"-->
-                                                <!--<Stepper Minimum="0" Maximum="10" Increment="1" Value="{Binding Quantity}" ValueChanged="Stepper_ValueChanged" VerticalOptions="End" HorizontalOptions="Center"/>-->
-                                                <!--<Button Text="отчистить" Clicked="Button_Clicked"/>-->
                                             </StackLayout>
                                         </StackLayout>
                                     </StackLayout>
