--- a/MobileWorker/MobileWorker/Views/RestorePasswordPage.xaml
+++ b/MobileWorker/MobileWorker/Views/RestorePasswordPage.xaml
@@ -2,7 +2,8 @@
 
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="MobileWorker.Views.RestorePasswordPage">
+             x:Class="MobileWorker.Views.RestorePasswordPage"
+             Title="Смена пароля">
     <ContentPage.Content>
         <StackLayout>
             <Label x:Name="textLabel" Text="Введите логин и почту привязанную к аккаунту" />
