--- a/Diplom.Mobile/Diplom.Mobile/Views/OrderListPage.xaml
+++ b/Diplom.Mobile/Diplom.Mobile/Views/OrderListPage.xaml
@@ -3,7 +3,8 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:local="clr-namespace:Diplom.Mobile"
-             x:Class="Diplom.Mobile.Views.OrderListPage">
+             x:Class="Diplom.Mobile.Views.OrderListPage"
+             Title="Заказы">
     <ContentPage.Resources>
         <local:ConverterPaymentType x:Key="PaymentTypeConverter" />
     </ContentPage.Resources>
