--- a/MobileWorker/MobileWorker/Views/OrderListPage.xaml
+++ b/MobileWorker/MobileWorker/Views/OrderListPage.xaml
@@ -21,33 +21,32 @@
                 <ListView
                     HasUnevenRows="True"
                     ItemsSource="{Binding OrderList}"
-                    >
+                    CachingStrategy="RecycleElement"
+                    
+                    IsPullToRefreshEnabled="True"
+                    RefreshCommand="{Binding RefreshCommand}"
+                    IsRefreshing="{Binding IsRefreshing}"
+                    
+                    ItemAppearing="NewsList_ItemAppearing">
+                    
                     <ListView.ItemTemplate>
                         <DataTemplate>
                             <ViewCell>
-                                <ViewCell.ContextActions>
-                                    <!--<MenuItem Clicked="OnMore"
-                                          CommandParameter="{Binding .}"
-                                          Text="More" />-->
-                                    <MenuItem Clicked="OnDelete"
-                                              CommandParameter="{Binding .}"
-                                              Text="Delete" IsDestructive="True" />
-                                </ViewCell.ContextActions>
                                 <ViewCell.View>
                                     <StackLayout Orientation="Vertical">
                                         <!--Дата и время выполнения заказа-->
-                                        <Label Text="{Binding LeadTime, StringFormat='Заказ будет готов к: {0}'}"
-                                               FontSize="30" Style="{StaticResource labelNameBold}" />
+                                        <Label Text="{Binding LeadTime, StringFormat='Приготовить к: {0}'}"
+                                               FontSize="27" Style="{StaticResource labelNameBold}" />
                                         <Label Text="{Binding TotalPrice, StringFormat='Стоимость заказа: {0} Руб.'}"
-                                               FontSize="23" Style="{StaticResource labelTextDescription}" />
+                                               FontSize="20" Style="{StaticResource labelTextDescription}" />
                                         <Label
                                             Text="{Binding TypePayment, Converter={StaticResource PaymentTypeConverter}, StringFormat='Тип оплаты: {0}'}"
-                                            FontSize="23" Style="{StaticResource labelTextDescription}" />
+                                            FontSize="20" Style="{StaticResource labelTextDescription}" />
 
                                         <StackLayout Orientation="Horizontal" >
                                             <Label
                                                 Text="{Binding Status, Converter={StaticResource PaymentTypeConverter}, StringFormat='Статус заказа: {0}'}"
-                                                FontSize="23" Style="{StaticResource labelTextDescription}" />
+                                                FontSize="20" Style="{StaticResource labelTextDescription}" />
                                         </StackLayout>
                                         <Button Text="Подробнее" HorizontalOptions="Fill"
                                                 CommandParameter="{Binding OrderList}" Clicked="Button_Clicked" Style="{StaticResource ButtonShop}"/>
